Fix alignment issues

--- a/public/style.css
+++ b/public/style.css
@@ -16,15 +16,19 @@ h1 {
 .todo-item {
 	font-family: 'Open Sans', sans-serif;
 	margin-bottom: 0;
+	font-size: 14px;
 }
+
+
 
 /* Text input styling */
 input[type="text"] {
 	border: none;
 	border-bottom: 1px solid black;
 	background: rgba(0, 0, 0, 0);
-	width: 75px;
+	width: 100px;
 	height: 15px;
+	padding-bottom: 5px;
 }
 
 input[type="text"]:focus {
